add cards and change image

--- a/src/components/infinite-Scroll/index.css
+++ b/src/components/infinite-Scroll/index.css
@@ -5,6 +5,8 @@
 	display: grid;
 
 	gap: 20px;
+	padding: 40px;
 	padding-bottom: 200px;
+
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
