--- a/src/components/combobox/index.css
+++ b/src/components/combobox/index.css
@@ -81,8 +81,8 @@ select option {
 	justify-content: center;
 }
 .formContainer {
-	height: 350px;
-	width: 400px;
+	height: 550px;
+	width: 350px;
 	border-radius: 10px;
 	z-index: 1;
 	background-color: rgb(68, 68, 68);
@@ -133,10 +133,10 @@ select option {
 .resultsContenedor {
 	margin-top: 50px;
 	width: 50vw;
-
+	padding: 30px;
 	display: grid;
 
-	gap: 20px;
+	gap: 40px;
 	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 .buttonAdd {
@@ -161,11 +161,29 @@ select option {
 	max-width: 200px;
 	height: 300px;
 	padding: 5px;
+	transition: ease all 0.5s;
+	cursor: pointer;
 }
-.pokeImage {
+.resultsInfo:hover {
+	scale: 1.1;
+	background-color: rgba(244, 244, 244, 0.109);
+}
+.resultsInfo:hover h2 {
+	color: aliceblue;
+}
+.resultsInfo:hover h3 {
+	color: aliceblue;
+}
+.imagenes {
 	z-index: 0;
 
 	height: 180px;
+	width: 90%;
+}
+.imagenes2 {
+	z-index: 0;
+
+	height: 280px;
 	width: 90%;
 }
 .searchButton {
