--- a/src/components/combobox/index.css
+++ b/src/components/combobox/index.css
@@ -70,7 +70,7 @@ select option {
 	font-weight: 300;
 }
 .backgroundForm {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	bottom: 0px;
 	left: 0px;
@@ -79,6 +79,7 @@ select option {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	z-index: 1;
 }
 .formContainer {
 	height: 550px;
